Fix information alignment

--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,7 @@ p
 {
     background-color: bisque;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     padding: 40px 0px 80px;
     gap: 40px
